--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
   build-cms:
     name: Build for CMS
     runs-on: [ubuntu-latest]
-    container: adriansutherland/vm370:latest
+    container: adriansutherland/vm370:builder
 
     steps:
 
